--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>hpi</packaging>
 	<properties>
-		<jenkins.version>2.164.1</jenkins.version>
+		<jenkins.version>2.204.1</jenkins.version>
 		<java.level>8</java.level>
-		<slf4j.version>1.7.25</slf4j.version>
+		<slf4jVersion>1.7.26</slf4jVersion>
 	</properties>
 	<name>Cloudify Plugin for Jenkins</name>
 	<!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for 
@@ -48,22 +48,17 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
+		<!--
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>structs</artifactId>
+			<version>1.10</version>
+		</dependency>
+		-->
 		<dependency>
 			<groupId>co.cloudify</groupId>
 			<artifactId>rest-client</artifactId>
 			<version>5.0.5</version>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20190722</version>
-		</dependency>
-		-->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
