--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -16,7 +15,11 @@
 	<properties>
 		<jenkins.version>2.204.2</jenkins.version>
 		<java.level>8</java.level>
+		<!-- Needs to be called this way... it's used by the parent project -->
 		<slf4jVersion>1.7.26</slf4jVersion>
+		<jersey.version>2.27</jersey.version>
+		<!-- The Jackson version must be compatible with both Jersey and Jenkins' parent POM. -->
+		<jackson.version>2.9.0</jackson.version>
 	</properties>
 	<name>Cloudify Plugin for Jenkins</name>
 	<!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for 
@@ -64,6 +67,56 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
+		</dependency>
+		<!--
+		We need these Jackson dependencies during compile time as well.
+		These are already included in Jersey (see below), however we depend
+		on Jersey at runtime scope, which means that Jackson wouldn't be available
+		at compile time. Changing Jersey's scope to "compile" would be less desireable,
+		as I'd like my compile-time classpath to be as narrow as possible.
+		-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jaxb-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<!--
+		Runtime dependencies.
+		We ship with the latest version of Jersey that is supported by Jenkins' POM.
+		-->
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>${jersey.version}</version>
+			<scope>runtime</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>jakarta.ws.rs</groupId>
+					<artifactId>jakarta.ws.rs-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>${jersey.version}</version>
+			<scope>runtime</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>jakarta.ws.rs</groupId>
+					<artifactId>jakarta.ws.rs-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
