--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,6 @@
 			<artifactId>jackson2-api</artifactId>
 			<version>2.9.9</version>
 		</dependency>
-		<dependency>
-			<groupId>org.jenkins-ci.plugins</groupId>
-			<artifactId>git</artifactId>
-			<version>[4.1.1,)</version>
-		</dependency>
 		<!--
 		Runtime dependencies.
 		We ship with the latest version of Jersey that is supported by Jenkins' POM.
@@ -103,6 +98,20 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>${slf4jVersion}</version>
 		</dependency>
+		<!--
+		-->
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>git</artifactId>
+			<version>[4.1.1,)</version>
+		</dependency>
+		<!--
+		<dependency>
+			<groupId>org.jenkins-ci.plugins.workflow</groupId>
+			<artifactId>workflow-aggregator</artifactId>
+			<version>[2.6,)</version>
+		</dependency>
+		-->
 	</dependencies>
 	<build>
 		<pluginManagement>
