--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>jackson2-api</artifactId>
 			<version>2.9.9</version>
 		</dependency>
+		<!-- Needed for YAML serialization. -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.9.9</version>
+		</dependency>
 		<!--
 		Runtime dependencies.
 		We ship with the latest version of Jersey that is supported by Jenkins' POM.
