--- a/pom.xml
+++ b/pom.xml
@@ -5,37 +5,39 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>3.50</version>
-		<relativePath />
+		<version>3.56</version>
 	</parent>
 	<groupId>co.cloudify.plugins</groupId>
 	<artifactId>cloudify-jenkins-plugin</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>hpi</packaging>
 	<properties>
-		<jenkins.version>2.204.3</jenkins.version>
+		<jenkins.version>2.204.4</jenkins.version>
 		<java.level>8</java.level>
 		<!-- Needs to be called this way... it's used by the parent project -->
 		<slf4jVersion>1.7.26</slf4jVersion>
+		<jackson.version>2.9.9</jackson.version>
 		<jersey.version>2.30</jersey.version>
 	</properties>
 	<name>Cloudify Plugin for Jenkins</name>
-	<!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for 
-		the applicable one if needed. -->
 	<licenses>
 		<license>
 			<name>MIT License</name>
-			<url>https://opensource.org/licenses/MIT</url>
+			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
 		</license>
 	</licenses>
-	<!-- If you want this to appear on the wiki page: <developers> <developer> 
-		<id>bhacker</id> <name>Bob Q. Hacker</name> <email>bhacker@nowhere.net</email> 
-		</developer> </developers> -->
-
-	<!-- Assuming you want to host on @jenkinsci: <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url> 
-		<scm> <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection> 
-		<developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection> 
-		<url>https://github.com/jenkinsci/${project.artifactId}-plugin</url> </scm> -->
+	<developers>
+		<developer>
+			<id>isaac-s</id>
+			<name>Isaac Shabtay</name>
+			<email>isaac-s@users.noreply.github.com</email>
+		</developer>
+	</developers>
+	<scm>
+		<connection>https://github.com/Cloudify-PS/cloudify-jenkins-plugin.git</connection>
+		<developerConnection>https://github.com/Cloudify-PS/cloudify-jenkins-plugin.git</developerConnection>
+		<url>https://github.com/Cloudify-PS/cloudify-jenkins-plugin</url>
+	</scm>
 	<repositories>
 		<repository>
 			<id>repo.jenkins-ci.org</id>
@@ -57,18 +59,17 @@
 		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>jackson2-api</artifactId>
-			<version>2.9.9</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<!-- Needed for YAML serialization. -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
-			<version>2.9.9</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<!--
 		Runtime dependencies.
 		We ship with the latest version of Jersey that is supported by Jenkins' POM.
-		Also, Jenkins uses JUL for logging, so include the SLF4J adapter here.
 		-->
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
@@ -98,11 +99,6 @@
 					<artifactId>jakarta.ws.rs-api</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-			<version>${slf4jVersion}</version>
 		</dependency>
 		<!--
 		-->
