--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>hpi</packaging>
 	<properties>
-		<jenkins.version>2.204.4</jenkins.version>
+		<jenkins.version>2.204.5</jenkins.version>
 		<java.level>8</java.level>
-		<!-- Needs to be called this way... it's used by the parent project -->
+        <!-- Needs to be called this way... it's used by the parent project -->
 		<slf4jVersion>1.7.26</slf4jVersion>
 		<jackson.version>2.9.9</jackson.version>
 		<jersey.version>2.30</jersey.version>
@@ -61,16 +61,16 @@
 			<artifactId>jackson2-api</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		<!-- Needed for YAML serialization. -->
+        <!-- Needed for YAML serialization. -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		<!--
-		Runtime dependencies.
-		We ship with the latest version of Jersey that is supported by Jenkins' POM.
-		-->
+        <!--
+        Runtime dependencies.
+        We ship with the latest version of Jersey that is supported by Jenkins' POM.
+        -->
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
@@ -100,20 +100,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!--
-		-->
-		<dependency>
-			<groupId>org.jenkins-ci.plugins</groupId>
-			<artifactId>git</artifactId>
-			<version>[4.1.1,)</version>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.jenkins-ci.plugins.workflow</groupId>
-			<artifactId>workflow-aggregator</artifactId>
-			<version>[2.6,)</version>
-		</dependency>
-		-->
 	</dependencies>
 	<build>
 		<pluginManagement>
@@ -184,4 +170,30 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<dependencies>
+                 <!--
+                 In development mode, include some convenience plugins.
+                 These aren't mandatory for release.
+                 -->
+				<dependency>
+					<groupId>org.jenkins-ci.plugins</groupId>
+					<artifactId>git</artifactId>
+					<version>[4.1.1,)</version>
+				</dependency>
+                <!--
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-aggregator</artifactId>
+                    <version>[2.6,)</version>
+                </dependency>
+                -->
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
