--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
-        <jenkins.version>2.204.5</jenkins.version>
+        <jenkins.version>2.204.1</jenkins.version>
         <java.level>8</java.level>
         <!-- Needs to be called this way... it's used by the parent project -->
         <slf4jVersion>1.7.26</slf4jVersion>
         <jackson.version>2.9.9</jackson.version>
         <jersey.version>2.30</jersey.version>
+        <credentials.version>2.3.3</credentials.version>
     </properties>
     <name>Cloudify Plugin for Jenkins</name>
     <licenses>
@@ -60,6 +61,11 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>jackson2-api</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>credentials</artifactId>
+            <version>${credentials.version}</version>
         </dependency>
         <!-- Needed for YAML serialization. -->
         <dependency>
@@ -184,13 +190,23 @@
                 <dependency>
                     <groupId>org.jenkins-ci.plugins</groupId>
                     <artifactId>git</artifactId>
-                    <version>[4.1.1,)</version>
+                    <version>4.2.2</version>
                 </dependency>
-                <!--
                 <dependency>
                     <groupId>org.jenkins-ci.plugins.workflow</groupId>
                     <artifactId>workflow-aggregator</artifactId>
-                    <version>[2.6,)</version>
+                    <version>2.6</version>
+                </dependency>
+                <dependency>
+                	<groupId>org.jenkins-ci.plugins</groupId>
+                	<artifactId>matrix-project</artifactId>
+                	<version>1.14</version>
+                </dependency>
+                <!--
+                <dependency>
+                	<groupId>io.jenkins.blueocean</groupId>
+                	<artifactId>blueocean</artifactId>
+                	<version>1.22.0</version>
                 </dependency>
                 -->
             </dependencies>
