--- a/pom.xml
+++ b/pom.xml
@@ -252,32 +252,39 @@
                     <groupId>org.jenkins-ci.plugins</groupId>
                     <artifactId>git</artifactId>
                     <version>${git.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.jenkins-ci.plugins</groupId>
-                            <artifactId>junit</artifactId>
-                        </exclusion>
-                    </exclusions>
                 </dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                    <artifactId>workflow-aggregator</artifactId>
+                    <version>2.5</version>
+                </dependency>
+                <!--
+                Pin these versions, to make the plugins above work nicely together.
+                -->
                 <dependency>
                     <groupId>org.jenkins-ci.plugins</groupId>
                     <artifactId>junit</artifactId>
                     <version>1.3</version>
                 </dependency>
-				<!--
-				<dependency>
-					<groupId>org.jenkins-ci.plugins.workflow</groupId>
-					<artifactId>workflow-aggregator</artifactId>
-					<version>2.6</version>
-				</dependency>
+                <dependency>
+                    <groupId>org.jenkins-ci.plugins</groupId>
+                    <artifactId>script-security</artifactId>
+                    <version>1.25</version>
+                </dependency>
+                <!--
 				<dependency>
 					<groupId>org.jenkins-ci.plugins</groupId>
 					<artifactId>matrix-project</artifactId>
 					<version>1.14</version>
 				</dependency>
 				-->
-				<!-- <dependency> <groupId>io.jenkins.blueocean</groupId> <artifactId>blueocean</artifactId> 
-					<version>1.22.0</version> </dependency> -->
+                <!--
+                <dependency>
+                    <groupId>io.jenkins.blueocean</groupId>
+                    <artifactId>blueocean</artifactId>
+                    <version>1.22.0</version>
+                </dependency>
+                -->
             </dependencies>
         </profile>
     </profiles>
