--- a/pom.xml
+++ b/pom.xml
@@ -36,22 +36,10 @@
         </developer>
     </developers>
     <scm>
-        <connection>https://github.com/Cloudify-PS/cloudify-jenkins-plugin.git</connection>
-        <developerConnection>https://github.com/Cloudify-PS/cloudify-jenkins-plugin.git</developerConnection>
-        <url>https://github.com/Cloudify-PS/cloudify-jenkins-plugin</url>
+        <connection>https://github.com/cloudify-cosmo/cloudify-jenkins-plugin.git</connection>
+        <developerConnection>https://github.com/cloudify-cosmo/cloudify-jenkins-plugin.git</developerConnection>
+        <url>https://github.com/cloudify-cosmo/cloudify-jenkins-plugin</url>
     </scm>
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
     <dependencies>
         <dependency>
             <groupId>co.cloudify</groupId>
@@ -258,6 +246,11 @@
                     <artifactId>workflow-aggregator</artifactId>
                     <version>2.5</version>
                 </dependency>
+                <dependency>
+                    <groupId>jp.ikedam.jenkins.plugins</groupId>
+                    <artifactId>extensible-choice-parameter</artifactId>
+                    <version>1.6.0</version>
+                </dependency>
                 <!--
                 Pin these versions, to make the plugins above work nicely together.
                 -->
@@ -276,20 +269,6 @@
                     <artifactId>annotation-indexer</artifactId>
                     <version>1.12</version>
                 </dependency>
-                <!--
-				<dependency>
-					<groupId>org.jenkins-ci.plugins</groupId>
-					<artifactId>matrix-project</artifactId>
-					<version>1.14</version>
-				</dependency>
-				-->
-                <!--
-                <dependency>
-                    <groupId>io.jenkins.blueocean</groupId>
-                    <artifactId>blueocean</artifactId>
-                    <version>1.22.0</version>
-                </dependency>
-                -->
             </dependencies>
         </profile>
         <profile>
