--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,11 @@
 				<!-- In development mode, include some convenience plugins. These aren't 
 					mandatory for release. -->
                 <dependency>
+                    <groupId>com.sonyericsson.hudson.plugins.rebuild</groupId>
+                    <artifactId>rebuild</artifactId>
+                    <version>1.31</version>
+                </dependency>
+                <dependency>
                     <groupId>org.jenkins-ci.plugins</groupId>
                     <artifactId>git</artifactId>
                     <version>${git.version}</version>
@@ -257,7 +262,7 @@
                 <dependency>
                     <groupId>org.jenkins-ci.plugins</groupId>
                     <artifactId>junit</artifactId>
-                    <version>1.3</version>
+                    <version>1.20</version>
                 </dependency>
                 <dependency>
                     <groupId>org.jenkins-ci.plugins</groupId>
