--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <jersey.version>2.28</jersey.version>
         <jackson.version>2.10.3</jackson.version>
         <git.version>3.9.4</git.version>
+        <credentials.version>2.3.7</credentials.version>
     </properties>
     <name>Cloudify Plugin for Jenkins</name>
     <licenses>
@@ -91,13 +92,11 @@
 			<version>${jackson.dataformat.yaml.version}</version>
 		</dependency>
 		-->
-		<!--
 		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>credentials</artifactId>
 			<version>${credentials.version}</version>
 		</dependency>
-		-->
 		<!-- Runtime dependencies. We ship with the latest version of Jersey that 
 			is supported by Jenkins' POM. -->
         <dependency>
